# LeapClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/leap/: LeapConnector.hpp
include/osc/: OSCLeapClient.h
include/util/: command_line_options.hpp
src/leap/: LeapConnector.cpp
src/osc/: OSCLeapClient.cpp
src/util/: command_line_options.cpp
test_server/: osc-server.py  requirements.txt
